<resources>
    <string name="app_name">Биатлонный таймер</string>

    //Активити
    <string name="folder_activity_name">Выберите папку</string>
    //Соревнования
    <string name="main_activity_head">Список файлов соревнований</string>
    <string name="main_activity_name_col">Название соревнования</string>
    <string name="main_activity_date_col">Дата</string>
    <string name="main_activity_data_sort">Сортировка по дате</string>
    <string name="main_activity_name_sort">Сортировка по названию</string>
    <string name="main_activity_del">Удаление соревнования</string>
    <string name="main_activity_edit">Редактирование соревнования</string>
    <string name="main_activity_start_text_view">Список соревнований пуст, добавьте соревнование.</string>

    //Настройки
    <string name="summary_international_competition">Международные соревнования</string>
    <string name="summary_regional_competition">Региональные соревнования</string>
    <string name="summary_count_checkpoint">"Количество контрольных точек: "</string>
    <string name="item_type_single_start">Одиночный старт</string>
    <string name="item_type_double_start">Парный старт</string>
    <string name="item_type_mas_start">Массовый старт</string>
    <string name="start_summary_group">Создает группы необходимые для соревнования</string>
    <string name="aftter_add_summary_group">Группы соревнования: </string>
    <string name="summary_type_competition">Устанавливает тип соревнования (по умолчанию: Региональные)</string>
    <string name="summary_data_competition">Устанавливает дату проведения соревования</string>
    <string name="summary_time_to_start">Устанавливает время до начала старта</string>
    <string name="setting_activity_title_name_competition">Введите название соревнования</string>
    <string name="setting_activity_title_set_data_competition">Дата соревнования</string>
    <string name="setting_activity_title_time_to_start">Время до начала старта</string>
    <string name="setting_activity_title_type_start">Тип старта</string>
    <string name="summary_type_start">Устанавливает тип старта спортсменов</string>
    <string name="setting_activity_title_interval">Интервал старта</string>
    <string name="summary_interval">Устанавливает интервал старта спортсменов</string>
    <string name="setting_activity_title_group">Группы участников соревнования</string>
    <string name="summary_group">Создает группы необходимые для соревнования</string>
    <string name="setting_activity_title_checkpoint">Количество КП</string>
    <string name="summary_checkpoint">Устанавливает количество контрольных пунктов</string>
    <string name="setting_activity_title_second_interval">Второй интервал старта</string>
    <string name="check_input_data">Проверьте введеные данные</string>
    <string name="setting_activity_title_fine">Штраф</string>
    <string name="summary_fine">Устанавливает время одного штрафа</string>
    <string name="summary_second_interval_helper">" после позиции - "</string>
    <string name="wrong_settings_toast">Заполните все настройки или проверьте их правильность</string>
    <string name="setting_activity_title_number_start">Стартовый номер</string>
    <string name="summary_number_start">Устанавливает стартовый номер и количество участников</string>

    //Список участников
    <string name="participant_list_actvity_head">Список участников соревнования</string>
    <string name="participant_list_number_sort">Сортировка по номеру</string>
    <string name="participant_list_name_sort">Сортировка по ФИО</string>
    <string name="participant_list_group_sort">Сортировка по группам</string>
    <string name="participant_list_country_sort">Сортировка по региону</string>
    <string name="participant_list_start_text_view">Список участников пуст, добавьте нового или загрузите из базы данных. Для перехода к базе данных проведите по экрану.</string>
    <string name="participant_list_year_sort">Сортировка по году</string>

    //База данных
    <string name="db_list_activity_head">База данных участников</string>
    <string name="db_list_start_text_view">База данных пуста.</string>

    //Диалоги
    <string name="dialog_choose_title">Выберите действие</string>
    <string name="dialog_title_type_start">Выберите тип старта</string>
    <string name="dialog_title_checkpoint">Введите количество КП</string>
    <string name="dialog_title_group">Группы соревнования</string>
    <string name="dialog_title_interval">Установите интервал</string>
    <string name="add_dialog_title">Добавление участника</string>
    <string name="rename_dialog_title">Редактирование</string>
    <string name="delete_dialog_title">Удаление</string>
    <string name="messege_del_dialog_from_database">Вы уверены, что хотите удалить участников из базы данных?</string>
    <string name="warning_dialog_title">Предупреждение</string>
    <string name="message_dialog_warning">Вы уверены, что хотите выйти?</string>
    <string name="message_dialog_reset">Вы уверены, что хотите сбросить соревнование?</string>
    <string name="reset_title">Сброс</string>
    <string name="message_end_competition">Вы уверены, что хотите завершить соревнование?</string>
    <string name="add_group_dialog_title">Название групп</string>
    <string name="add_dialog_item_group">Добавить группу</string>
    <string name="interval_dialog_title">Установите интервал</string>
    <string name="delete_dialog_group">Удаление группы</string>
    <string name="message_dialog_delete_group">Вы уверены, что хотите удалить группу?</string>
    <string name="dialog_time_to_start_title">Установите время до старта</string>
    <string name="dialog_add_group_title">Группы соревнования</string>
    <string name="add_participant_dialog_group_text">Группа: </string>
    <string name="add_participant_dialog_color_text">Цвет: </string>
    <string name="add_group_dialog_hint">Введите название группы</string>
    <string name="dialog_fine_title">Установите время штрафа</string>
    <string name="summary_fine_after_set">"Штраф - "</string>
    <string name="dialog_title_start_number">Установите номер старта и количесвто участников</string>
    <string name="summary_after_set_start_nmber">"Стартовый номер - "</string>
    <string name="summary_after_set_count_participant">". Количество участников - "</string>
    <string name="dialog_hint_start_number">Стартовый номер</string>
    <string name="dialog_hint_count_participant">Кол-во участников</string>
    <string name="dialog_second_interval">Номер участника/Номер пары</string>

    //Соревнование (Таблицы, участники)
    <string name="number">Номер</string>
    <string name="position">Поз.</string>
    <string name="time">Время</string>
    <string name="lag">Отставание</string>
    <string name="count_fine">Штраф</string>
    <string name="start_timer">Старт</string>
    <string name="stop_timer">Сброс</string>
    <string name="current_round">"Круг"</string>
    <string name="dialog_fine_title_competition">Установите количество штрафов</string>
    <string name="dialog_text_fine_competiton">Количество штрафов - </string>
    <string name="head_table_last_act">Последние действия</string>



    //Кнопки
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="add">Добавить</string>
    <string name="cancel">Отмена</string>
    <string name="accept">Принять</string>
    <string name="finish">Завершить</string>
    <string name="reset">Сброс</string>
    <string name="choose_color">Изменить цвет</string>
    <string name="delete">Удалить</string>

    //Уведомления
    <string name="competition_already_exists">Соревнование уже существует!</string>
    <string name="participant_added">Участник добавлен</string>
    <string name="participant_already_exists_in_database">Такой участник уже есть в базе данных</string>
    <string name="participant_already_exists">Проверьте номер участника</string>

    //Последнияя активность
    <string name="title_final_activity">Результаты соревнования</string>
    <string name="time_column_final_activity">Время</string>
    <string name="final_activity_place_sort">Сортировка по месту</string>
    <string name="final_activity_name_sort">Сортировка по имени</string>
    <string name="final_activity_group_sort">Сортировка по группам</string>
    <string name="final_activity_send">Отправка</string>
    <string name="final_activity_send_by_whatsapp">WhatsApp</string>
    <string name="final_activity_send_by_mail">Почта</string>
    <string name="final_activity_send_by_googledrive">GoogleDrive</string>
    <string name="final_activity_save">Сохранить</string>

    //Общие
    <string name="default_group">Без группы</string>
    <string name="fio_col_title">ФИО</string>
    <string name="year_col_title">Год</string>//Поговорить!
    <string name="country_col_title">Страна</string>
    <string name="region_col_titile">Регион</string>
    <string name="group_col_title">Группа</string>
    <string name="strat_time_col_title">Старт</string>

    //Массивы
    <string-array name="type_start">
        <item>Одиночный старт</item>
        <item>Парный старт</item>
        <item>Массовый старт</item>
    </string-array>
</resources>
