<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="@string/final_activity_place_sort"
        android:id="@+id/action_bar_final_activity_place_sort"
        android:showAsAction="never"
        android:orderInCategory="100"
        android:visible="true"/>

    <item
        android:title="@string/final_activity_name_sort"
        android:id="@+id/action_bar_final_activity_name_sort"
        android:showAsAction="never"
        android:orderInCategory="100"
        android:visible="true"/>

    <item
        android:icon="@drawable/ic_send"
        android:title="@string/final_activity_send"
        app:showAsAction="always"
        android:id="@+id/action_bar_final_activity_send"
        android:orderInCategory="100"
        android:visible="true"/>

</menu>