<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/dialogNameLayout"
        android:weightSum="2">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/fio_col_title"
            android:gravity="center"
            android:id="@+id/dialogName"
            android:inputType="textCapWords"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:imeOptions="actionNext"
            android:layout_weight="1.8"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="Номер"
            android:gravity="center"
            android:id="@+id/dialogNumber"
            android:inputType="number"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:imeOptions="actionNext"
            android:layout_weight="0.2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/dialogBirthdayCountryLayout"
        android:layout_below="@+id/dialogNameLayout"
        android:weightSum="2">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/year_col_title"
            android:id="@+id/dialogBirthday"
            android:inputType="date"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="1"
            android:gravity="center"
            android:imeOptions="actionNext"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/country_col_title"
            android:id="@+id/dialogCountry"
            android:inputType="textCapSentences"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="1"
            android:gravity="center"
            android:imeOptions="actionDone"/>
    </LinearLayout>

</RelativeLayout>