<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/participantList"
    tools:context="com.esd.esd.biathlontimer.Activities.ViewPagerActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:id="@+id/headParticipantListLayout"
        android:background="#000000">

        <TextView
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginLeft="1dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:gravity="center"
            android:text="@string/participant_list_actvity_head"
            android:textSize="@dimen/normal_text_size"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:id="@+id/headTableParticipantListLayout"
        android:layout_below="@id/headParticipantListLayout"
        android:background="#000000"
        android:weightSum="4">

        <TextView
            android:layout_margin="1dp"
            android:id="@+id/nameParticipantList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fio_col_title"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="3"
            android:typeface="serif"
            android:background="#ffffff"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/birthdayParticipantList"
            android:layout_marginRight="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:text="@string/year_col_title"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="0.5"
            android:typeface="serif"
            android:background="#ffffff"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/countryParticipantList"
            android:layout_marginRight="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:text="@string/country_col_title"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="0.5"
            android:typeface="serif"
            android:background="#ffffff"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:id="@+id/scrollViewParticipantList"
        android:scrollbars="vertical"
        android:layout_below="@+id/headTableParticipantListLayout"
        android:elevation="2dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#000000"
            android:id="@+id/tableParticipantListLayout"
            android:scrollbars="vertical"
            android:elevation="4dp">

        </TableLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/addFileBtn"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:src="@drawable/ic_add_file"
        android:layout_marginBottom="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="OnClick"
        android:layout_above="@+id/scrollViewParticipantList"/>

</RelativeLayout>