<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#FFFFFF">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:id="@+id/headCompetitionTableActivity"
        android:orientation="horizontal"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Тут таймер"
            android:textColor="@color/timerStart"
            android:id="@+id/competitionTimer"
            android:typeface="serif"
            android:layout_gravity="center"
            android:gravity="center"/>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_gravity="right|center_vertical">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/returnLastStep"
                android:src="@drawable/ic_return_last_step"
                android:tint="#ffffff"
                android:background="@null"
                android:layout_weight="0.5"
                android:onClick="returnLastStepOnClick"/>

        </FrameLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/headTablesCompetitions"
        android:orientation="horizontal"
        android:layout_below="@id/headCompetitionTableActivity"
        android:background="#000000"
        android:weightSum="100">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/numberParticipantCompetitionTable"
            android:gravity="center"
            android:textColor="#000000"
            android:text="№"
            android:textStyle="bold"
            android:textSize="@dimen/title_text_size"
            android:background="#ffffff"
            android:layout_margin="1dp"
            android:layout_weight="10"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/positionParticipantCompetitionTable"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="@dimen/title_text_size"
            android:text="@string/position"
            android:textStyle="bold"
            android:background="#ffffff"
            android:layout_weight="10"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"/>


        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/nameParticipantCompetitionTable"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="@dimen/title_text_size"
            android:text="@string/fio_col_title"
            android:textStyle="bold"
            android:background="#ffffff"
            android:layout_weight="40"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"/>



        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/timeParticipantCompetitionTable"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="@dimen/title_text_size"
            android:text="@string/time"
            android:textStyle="bold"
            android:background="#ffffff"
            android:layout_weight="20"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/lagParticipantCompetitionTable"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="@dimen/title_text_size"
            android:text="@string/lag"
            android:textStyle="bold"
            android:background="#ffffff"
            android:layout_weight="20"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"/>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recyclerViewTableCompetition"
        android:scrollbars="vertical"
        android:layout_below="@+id/headTablesCompetitions"
        android:layout_above="@+id/toolBarTablesCompetition"
        android:elevation="2dp">

    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/toolBarTablesCompetition"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="5">


            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tableBack"
                android:src="@drawable/ic_back"
                android:background="@null"
                android:tint="#000000"
                android:layout_weight="0.5"
                android:layout_gravity="right"
                android:onClick="OnClickPreviousTable"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/current_round"
                android:textColor="@color/black"
                android:id="@+id/currentRound"
                android:typeface="serif"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="4"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_forward"
                android:id="@+id/tableForward"
                android:layout_weight="0.5"
                android:layout_gravity="left"
                android:tint="#000000"
                android:background="@null"
                android:onClick="OnClickNextTable"/>

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>